[tool.poetry]
name = "music_bot"
version = "0.1.0"
description = ""
authors = ["timelessnesses <mooping3roblox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
Flask = "^2.1.2"
orjson = "^3.8.5"
python-dateutil = "^2.8.2"
parsedatetime = "^2.6"
jishaku = "^2.5.0"
psutil = "^5.9.4"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
python-dotenv = "^0.21.1"
PyNaCl = "^1.5.0"
humanize = "^4.2.3"
discord-together = "^1.2.6"
wavelink = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.12.0"
autoflake = "^1.7"
flake8 = "^5.0.4"
watchdog = "^2.2.1"
pylint = "^2.15.10"
mypy = "*"
guppy3 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
