[tool.poetry]
name = "music_bot"
version = "0.1.0"
description = ""
authors = ["timelessnesses <mooping3roblox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
Flask = "^3.0.0"
orjson = "^3.8.6"
python-dateutil = "^2.8.2"
parsedatetime = "^2.6"
jishaku = "^2.5.0"
psutil = "^5.9.4"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
python-dotenv = "^1.0.0"
PyNaCl = "^1.5.0"
humanize = "^4.6.0"
discord-together = "^1.2.6"
wavelink = "^2.6.3"
discord-py = "^2.3.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^1.7"
flake8 = "^5.0.4"
pylint = "^2.17.1"
mypy = "*"
guppy3 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
